feat(database): update schema with new travel essentials and itinerary metadata
- Added 'accommodation' to activity_type enum.
- Enhanced itinerary_days table with source, version, timezone, and additional_data fields.
- Modified travel_essentials table to reference itinerary_days and added item_id.
- Created function to retrieve travel essentials for a specific itinerary day.
- Updated get_itinerary_day function to include travel essentials and additional metadata.

--- a/app/locales/ar/translation.json
+++ b/app/locales/ar/translation.json
@@ -46,5 +46,67 @@
       "purpose": "الغرض",
       "dietary": "النظام الغذائي",
       "interests": "الاهتمامات"
+    },
+    "nav": {
+      "dashboardDescription": "عرض لوحة التحكم المخصصة الخاصة بك مع المباريات والأحداث القادمة",
+      "badgeNew": "جديد",
+      "overview": "نظرة عامة",
+      "itineraryQuickLink": "الجدول الزمني",
+      "essentials": "أساسيات",
+      "itineraryDescription": "خطط ونظم جدولك اليومي خلال البطولة",
+      "itineraryDate1": "14 يونيو 2025 (الوصول)",
+      "itineraryDate2": "16 يونيو 2025 (يوم المباراة)",
+      "itineraryDate3": "20 يونيو 2025 (يوم المباراة)",
+      "itineraryDate4": "24 يونيو 2025 (يوم المباراة)",
+      "venuesDescription": "استكشف الملاعب والمواقع التي تستضيف مباريات كأس العالم",
+      "teamsDescription": "تصفح الفرق المشاركة واللاعبين وإحصائيات المباريات"
+    },
+    "footer": {
+      "description": "رفيقك الأمثل لتخطيط وتنظيم تجربة كأس العالم الخاصة بك. لا تفوت أي مباراة، وابحث عن أفضل الطرق، واكتشف المعالم المحلية.",
+      "about": "حول",
+      "aboutUs": "من نحن",
+      "faq": "الأسئلة الشائعة",
+      "contact": "اتصل بنا",
+      "features": "الميزات",
+      "itinerary": "الجدول الزمني",
+      "venues": "الأماكن",
+      "teams": "الفرق",
+      "legal": "قانوني",
+      "terms": "شروط الخدمة",
+      "privacy": "سياسة الخصوصية",
+      "allRightsReserved": "جميع الحقوق محفوظة"
+    },
+    "meta": {
+      "title": "جدول كأس العالم - رفيقك الأمثل لكأس العالم",
+      "description": "إدارة تجربة كأس العالم الخاصة بك مع مخطط رحلاتنا"
+    },
+    "auth": {
+      "signIn": "تسجيل الدخول",
+      "signUp": "إنشاء حساب",
+      "signOut": "تسجيل الخروج",
+      "account": "الحساب",
+      "loading": "جاري التحميل..."
+    },
+    "user": {
+      "account": "الحساب",
+      "profile": "الملف الشخصي",
+      "settings": "الإعدادات",
+      "logout": "تسجيل الخروج"
+    },
+    "landing": {
+      "heroTitle": "خطط لتجربة كأس العالم النهائية الخاصة بك",
+      "heroSubtitle": "نظم مبارياتك، وسائل النقل، أماكن الإقامة، والأنشطة في مكان واحد. لا تفوت أي لحظة من الإثارة.",
+      "getStarted": "ابدأ",
+      "viewDemo": "عرض تجريبي",
+      "features": "الميزات",
+      "feature1Title": "تتبع المباريات",
+      "feature1Description": "تتبع جميع مبارياتك بمعلومات مفصلة عن الأماكن والفرق وأوقات الانطلاق.",
+      "feature2Title": "تخطيط النقل",
+      "feature2Description": "خطط لطرقك بين الأماكن والإقامات والمعالم السياحية بمعلومات النقل في الوقت الفعلي.",
+      "feature3Title": "المعالم المحلية",
+      "feature3Description": "اكتشف المطاعم والمتاحف والمواقع الثقافية بالقرب من كل مكان للاستفادة القصوى من رحلتك في كأس العالم.",
+      "ctaTitle": "هل أنت مستعد لكأس العالم؟",
+      "ctaDescription": "انضم إلى الآلاف من المشجعين الذين يستخدمون جدول كأس العالم لتخطيط تجربتهم المثالية في البطولة.",
+      "signUp": "سجل الآن"
     }
   }
