feat: Enhance HeroSection with animations and dynamic elements
- Added animated floating particles and stadium lights to the HeroSection.
- Introduced a dynamic mesh gradient overlay for visual depth.
- Implemented a trophy icon animation and a rotating ring effect for team branding.
- Updated the HeroSection text with translation keys for better localization.
- Created a new HeroActions component for enhanced call-to-action buttons.

fix: Update Button component to use Slot from Radix UI

- Changed the button component to use Slot for better flexibility when rendering as child components.

i18n: Expand translation files with common phrases and form labels

- Added common error messages and form labels in Arabic, English, and French translation files.
- Updated itinerary-related text to use translation keys for better localization.

refactor: Improve itinerary route components with translations

- Updated itinerary route components to utilize translation hooks for dynamic text rendering.
- Enhanced ReminderStrip and WeatherInfo components with localized titles and labels.

chore: Update package dependencies

- Added @heroicons/react package for icon usage in the HeroSection.

--- a/app/locales/ar/translation.json
+++ b/app/locales/ar/translation.json
@@ -108,5 +108,71 @@
       "ctaTitle": "هل أنت مستعد لكأس العالم؟",
       "ctaDescription": "انضم إلى الآلاف من المشجعين الذين يستخدمون جدول كأس العالم لتخطيط تجربتهم المثالية في البطولة.",
       "signUp": "سجل الآن"
+    },
+    "common": {
+      "error": "خطأ",
+      "retry": "إعادة المحاولة",
+      "somethingWentWrong": "حدث خطأ ما.",
+      "cancel": "إلغاء",
+      "delete": "حذف",
+      "deleting": "جاري الحذف...",
+      "reset": "إعادة تعيين",
+      "save": "حفظ",
+      "saving": "جاري الحفظ..."
+    },
+    "forms": {
+      "activityType": "نوع النشاط",
+      "selectActivityType": "اختر نوع النشاط",
+      "status": "الحالة",
+      "selectStatus": "اختر الحالة",
+      "title": "العنوان",
+      "activityTitle": "عنوان النشاط",
+      "time": "الوقت",
+      "timeFormat": "الوقت بصيغة 24 ساعة (HH:MM)",
+      "duration": "المدة",
+      "durationPlaceholder": "مثال: 1س30د",
+      "durationFormat": "صيغة المدة: 1س30د، 45د، إلخ.",
+      "notes": "ملاحظات",
+      "notesPlaceholder": "ملاحظات إضافية حول هذا النشاط",
+      "markImportant": "وضع علامة كمهم",
+      "importantDescription": "تمييز هذا النشاط كمهم",
+      "requiresConfirmation": "يتطلب تأكيد",
+      "confirmationDescription": "هذا النشاط يحتاج إلى تأكيد",
+      "groupEvent": "حدث جماعي",
+      "groupDescription": "هذا نشاط جماعي",
+      "locationName": "اسم الموقع",
+      "address": "العنوان",
+      "latitude": "خط العرض",
+      "longitude": "خط الطول",
+      "transportMode": "وسيلة النقل",
+      "carrier": "الناقل",
+      "bookingReference": "مرجع الحجز"
+    },
+    "activityTypes": {
+      "activity": "نشاط",
+      "transport": "نقل",
+      "match": "مباراة",
+      "meal": "وجبة",
+      "hotel": "فندق"
+    },
+    "statusOptions": {
+      "pending": "قيد الانتظار",
+      "confirmed": "مؤكد",
+      "completed": "مكتمل"
+    },
+    "weather": {
+      "forecast": "توقعات الطقس",
+      "forecastLabel": "التوقعات:",
+      "temperatureLabel": "درجة الحرارة:",
+      "windLabel": "الرياح:",
+      "dataNotAvailable": "بيانات الطقس غير متوفرة."
+    },
+    "reminders": {
+      "title": "تذكيرات"
+    },
+    "itinerary": {
+      "noActivitiesYet": "لا توجد أنشطة بعد",
+      "addFirstActivity": "أضف نشاطك الأول",
+      "dayDetails": "تفاصيل اليوم"
     }
   }
